--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=todo
 spring.datasource.url=jdbc:mysql://localhost:3306/todo
 spring.datasource.username=root
-spring.datasource.password=sqlrootpw
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
