--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -74,6 +74,36 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.19.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.17.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>com.h2database</groupId>
+    		<artifactId>h2</artifactId>
+    		<version>2.3.232</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+      		<groupId>io.rest-assured</groupId>
+      		<artifactId>rest-assured</artifactId>
+      		<version>5.5.5</version>
+      		<scope>test</scope>
+		</dependency>
+		<dependency>
+      		<groupId>io.rest-assured</groupId>
+      		<artifactId>json-path</artifactId>
+      		<version>5.5.5</version>
+      		<scope>test</scope>
+		</dependency>
+		<dependency>
+      		<groupId>io.rest-assured</groupId>
+      		<artifactId>json-schema-validator</artifactId>
+      		<version>5.5.5</version>
+      		<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
