--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=todo
-spring.datasource.url=jdbc:mysql://localhost:3306/todo
-spring.datasource.username=root
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=jdbc:mysql://localhost:3306/${DB_NAME}
+spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
